static, class methon

--- a/Python_Grammar/intermediate_grammar/class_object.ipynb
+++ b/Python_Grammar/intermediate_grammar/class_object.ipynb
@@ -750,6 +750,497 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Class 자체의 속성과 메소드"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 클래스 변수: 클래스 정의안에서 하지만 메서드 밖에서 존재하는 변수\n",
+    "    * 클래스 변수는 해당 클래스를 사용하는 모든 메서드에서 공용으로 사용 가능\n",
+    "    * 클래스명.클래스변수명 으로 값을 할당하거나 불러오기 가능<br><br>\n",
+    "    \n",
+    "- 인스턴스 변수: 그동안 배워왔던 self.변수명 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Figure:\n",
+    "    # 클래스 변수 설정\n",
+    "    count = 0\n",
+    "    \n",
+    "    # 생성자\n",
+    "    def __init__(self, width, height):\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "        \n",
+    "        # 메소드안에서 클래스 변수에 값 할당 가능\n",
+    "        Figure.count += 1\n",
+    "    \n",
+    "    # 삭제\n",
+    "    def __del__(self):\n",
+    "        Figure.count -= 1\n",
+    "    \n",
+    "    # 개별 메서드\n",
+    "    def calc_area(self):\n",
+    "        return self.width * self.height"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "figure1 = Figure(5, 3)\n",
+    "# 위에서 생성자 메소드를 호출했으니 생성사 메소드 안에있는 Figure.count 수행\n",
+    "Figure.count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 클래스 다시 초기화시키지 않고 한번 더 호출\n",
+    "figure2 = Figure(3, 3)\n",
+    "Figure.count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 삭제 메소드 호출해보기\n",
+    "# del 클래스할당한_객체이름 -> 이런식으로 삭제 메소드 호출\n",
+    "del figure1\n",
+    "Figure.count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "del figure2\n",
+    "Figure.count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 클래스 메소드 종류\n",
+    "\n",
+    "- instance method : 우리가 지금까지 해온 self.변수명\n",
+    "<br><br>\n",
+    "- static method(정적 메소드) : 클래스안에서 정의, 다른 인스턴스 메소드안에서 호출 가능. 자유분방\n",
+    "    * self 파라미터가 없음\n",
+    "    * decorator형식으로 호출. ``@staticmethod``\n",
+    "    * ``클래스명.정적메서드 / 클래스할당한객체명.정적메서드`` 둘 다 가능"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Figure:\n",
+    "    # 생성자\n",
+    "    def __init__(self, width, height):\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "    \n",
+    "    # 인스턴스 메소드\n",
+    "    def calc_area(self):\n",
+    "        return self.width * self.height\n",
+    "    \n",
+    "    # 정적 메소드를 할당하기 위한 decorator\n",
+    "    @staticmethod\n",
+    "    # 정적 메소드 정의\n",
+    "    def is_square(rect_width, rect_height):\n",
+    "        if rect_width == rect_height:\n",
+    "            print(\"정사각형이 될 수 있음\")\n",
+    "        else:\n",
+    "            print(\"정사각형이 될 수 없음\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정사각형이 될 수 없음\n",
+      "정사각형이 될 수 없음\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 객체에 클래스 할당\n",
+    "figure1 = Figure(5 ,4)\n",
+    "# 클래스명.정적메소드 로 호출\n",
+    "Figure.is_square(5, 4)\n",
+    "# 클래스할당한_객체명.정적메소드 로 호출\n",
+    "figure1.is_square(5, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Figure:\n",
+    "    count = 0\n",
+    "    \n",
+    "    # 생성자 정의\n",
+    "    def __init__(self, width, height):\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "        Figure.count += 1\n",
+    "    \n",
+    "    # 정적 메소드 정의\n",
+    "    @staticmethod\n",
+    "    def print_count():\n",
+    "        print(Figure.count)\n",
+    "        \n",
+    "    # 정적 메소드 정의안에서 인스턴스 메소드의 속성(객체)에는 접근 불가\n",
+    "    # print_width() 안에 self인자 넣어줘도 안 됨!\n",
+    "    @staticmethod\n",
+    "    def print_width():\n",
+    "        print(self.width)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "figure1 = Figure(3, 4)\n",
+    "Figure.print_count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'self' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-a00a3964e027>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# 인스턴스 메소드의 self.객체 에는 접근 불가\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mFigure\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprint_width\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-24-99f4f9e0659a>\u001b[0m in \u001b[0;36mprint_width\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mstaticmethod\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mprint_width\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwidth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'self' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# 인스턴스 메소드의 self.객체 에는 접근 불가\n",
+    "Figure.print_width()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- class method : 클래스 변수에 접근이 가능함. 단, 인스턴스 메소드 self.객체명 처럼 접근해야 하는데, self 대신 ``cls``사용\n",
+    "    * 하지만 이것도 인스턴스 메서드의 self.객체 에 접근 불가함\n",
+    "    * 데코레이더 형식으로 작성해야함 ``@classmethod``\n",
+    "    * ``클래스명.클래스메서드명 / 클래스할당한객체명.클래스메서드명`` 으로 호출 가능"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Figure:\n",
+    "    count = 0\n",
+    "    \n",
+    "    def __init__(self, width, height):\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "        Figure.count += 1\n",
+    "        \n",
+    "    def cal_area(self):\n",
+    "        return self.width * self.height\n",
+    "    \n",
+    "    @classmethod\n",
+    "    # 클래스 메서드는 반드시 cls 인자를 넣어주어서 클래스변수를 호출 가능(단, 호출할 때 인스턴스 메소드가 호출하는 방식처럼 해야 함)\n",
+    "    def print_count(cls):\n",
+    "        cls.count += 5\n",
+    "        return cls.count      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "figure1 = Figure(3, 7)\n",
+    "Figure.count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 클래스메소드 호출\n",
+    "# 1.클래스명.클래스메서드명\n",
+    "Figure.print_count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2.클래스객체명.클래스메서드명\n",
+    "figure1.print_count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### static method VS class method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###### class method\n",
+    "class Figure:\n",
+    "    # 클래스 메서드에서 클래스 변수를 정의\n",
+    "    @classmethod\n",
+    "    def set_name(cls, name):\n",
+    "        cls.name = name\n",
+    "\n",
+    "# Figure이라는 클래스를 상속받음\n",
+    "class Circle(Figure):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Figure Figure\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 클래스명.클래스메서드명 으로 클래스메서드 호출\n",
+    "Figure.set_name('Figure')\n",
+    "print(Figure.name, Circle.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Figure Circle\n"
+     ]
+    }
+   ],
+   "source": [
+    "Circle.set_name('Circle')\n",
+    "print(Figure.name, Circle.name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 클래스 메서드에서 클래스 변수를 정의한 부모클래스를 상속받은 자식 클래스에서 set_name을 호출하면 부모 클래스의 클래스 변수는 바뀌지 않고 자식 클래스의 클래스 변수만 바뀜!!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###### static method\n",
+    "class Figure:\n",
+    "    @staticmethod\n",
+    "    def set_name(name):\n",
+    "        # 정적 메서드에서 클래스 변수를 정의\n",
+    "        Figure.name = name\n",
+    "    \n",
+    "class Circle(Figure):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Figure Figure\n"
+     ]
+    }
+   ],
+   "source": [
+    "Figure.set_name('Figure')\n",
+    "print(Figure.name, Circle.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Circle Circle\n"
+     ]
+    }
+   ],
+   "source": [
+    "Circle.set_name('Circle')\n",
+    "print(Figure.name, Circle.name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 정적 메서드에서 클래스 변수를 정의한 부모클래스를 상속받은 자식 클래스에서 set_name을 호출하면 부모 클래스의 클래스 변수도 바뀜!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
