refer for blogging"

--- a/machine_learning/tensorflow/logistic_regression.ipynb
+++ b/machine_learning/tensorflow/logistic_regression.ipynb
@@ -9,74 +9,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 2.3266437\n",
-      "200 0.6207555\n",
-      "400 0.5174121\n",
-      "600 0.4685196\n",
-      "800 0.4394603\n",
-      "1000 0.4186945\n",
-      "1200 0.40192953\n",
-      "1400 0.3873758\n",
-      "1600 0.3742148\n",
-      "1800 0.36204147\n",
-      "2000 0.3506401\n",
-      "2200 0.33988726\n",
-      "2400 0.3297052\n",
-      "2600 0.32004082\n",
-      "2800 0.31085393\n",
-      "3000 0.3021122\n",
-      "3200 0.29378745\n",
-      "3400 0.2858549\n",
-      "3600 0.2782915\n",
-      "3800 0.27107605\n",
-      "4000 0.26418868\n",
-      "4200 0.2576107\n",
-      "4400 0.2513247\n",
-      "4600 0.2453141\n",
-      "4800 0.23956339\n",
-      "5000 0.23405804\n",
-      "5200 0.22878446\n",
-      "5400 0.22372974\n",
-      "5600 0.2188819\n",
-      "5800 0.21422951\n",
-      "6000 0.20976216\n",
-      "6200 0.20546995\n",
-      "6400 0.20134366\n",
-      "6600 0.19737415\n",
-      "6800 0.19355363\n",
-      "7000 0.18987429\n",
-      "7200 0.1863289\n",
-      "7400 0.18291079\n",
-      "7600 0.17961352\n",
-      "7800 0.17643106\n",
-      "8000 0.1733579\n",
-      "8200 0.17038882\n",
-      "8400 0.16751878\n",
-      "8600 0.16474317\n",
-      "8800 0.1620575\n",
-      "9000 0.15945764\n",
-      "9200 0.15693982\n",
-      "9400 0.15450011\n",
-      "9600 0.15213521\n",
-      "9800 0.14984186\n",
-      "10000 0.14761686\n",
+      "0 4.6196284\n",
+      "200 0.4959296\n",
+      "400 0.46423128\n",
+      "600 0.44172403\n",
+      "800 0.42360285\n",
+      "1000 0.40788603\n",
+      "1200 0.39367494\n",
+      "1400 0.38052878\n",
+      "1600 0.3682153\n",
+      "1800 0.3566017\n",
+      "2000 0.34560576\n",
+      "2200 0.3351713\n",
+      "2400 0.32525605\n",
+      "2600 0.31582555\n",
+      "2800 0.30685005\n",
+      "3000 0.2983028\n",
+      "3200 0.29015923\n",
+      "3400 0.28239617\n",
+      "3600 0.27499223\n",
+      "3800 0.26792696\n",
+      "4000 0.2611812\n",
+      "4200 0.2547368\n",
+      "4400 0.24857678\n",
+      "4600 0.24268515\n",
+      "4800 0.2370468\n",
+      "5000 0.23164766\n",
+      "5200 0.2264743\n",
+      "5400 0.22151439\n",
+      "5600 0.21675615\n",
+      "5800 0.2121886\n",
+      "6000 0.20780164\n",
+      "6200 0.20358543\n",
+      "6400 0.199531\n",
+      "6600 0.19562979\n",
+      "6800 0.19187395\n",
+      "7000 0.18825598\n",
+      "7200 0.1847689\n",
+      "7400 0.1814061\n",
+      "7600 0.1781614\n",
+      "7800 0.17502908\n",
+      "8000 0.17200369\n",
+      "8200 0.16907994\n",
+      "8400 0.16625308\n",
+      "8600 0.1635186\n",
+      "8800 0.16087224\n",
+      "9000 0.15830997\n",
+      "9200 0.15582782\n",
+      "9400 0.15342243\n",
+      "9600 0.15109032\n",
+      "9800 0.1488282\n",
+      "10000 0.14663315\n",
       "\n",
       "Hypothesis:\n",
-      " [[0.02995404]\n",
-      " [0.1577679 ]\n",
-      " [0.30108222]\n",
-      " [0.7831166 ]\n",
-      " [0.9406628 ]\n",
-      " [0.9805344 ]] \n",
+      " [[0.02954526]\n",
+      " [0.15719463]\n",
+      " [0.29909858]\n",
+      " [0.78402984]\n",
+      " [0.9412316 ]\n",
+      " [0.9807263 ]] \n",
       "Correct(Y):\n",
       " [[0.]\n",
       " [0.]\n",
@@ -111,9 +141,9 @@
     "train = tf.train.GradientDescentOptimizer(learning_rate=0.01).minimize(cost)\n",
     "\n",
     "# 0.5값 이상이면 True(1)로 예측되도록 함\n",
-    "# cast함수로 float 소수점 버림\n",
+    "# cast함수: float형으로 출력되는 hypothesis값이 0.5보다 크면 정수 1(True), 작으면 정수 0(False)으로 변환\n",
     "predicted = tf.cast(hypothesis > 0.5, dtype=tf.float32)\n",
-    "# 예측값과 실제값 비교해서 평균값 내어 accuracy 출력\n",
+    "# 예측값과 실제값 비교해서 Boolean으로 반환 후, 1(True)값들의 평균을 내어서 accuracy 출력\n",
     "accuracy = tf.reduce_mean(tf.cast(tf.equal(predicted, Y),\n",
     "                                 dtype=tf.float32))\n",
     "\n",
@@ -126,7 +156,7 @@
     "        if step % 200 == 0:\n",
     "            print(step, cost_val)\n",
     "    \n",
-    "    # 위에서 역전파 학습으로 cost르 최소하하도록 학습한 후 마지막 업데이트 상태에서 forwarding한 후 예측된 확률값, 예측된 클래스값, 정확도 출력\n",
+    "    # 위에서 역전파 학습으로 cost를 최소하하도록 학습한 후 마지막 업데이트 상태에서 forwarding한 후 예측된 확률값, 예측된 클래스값, 정확도 출력\n",
     "    h, c, a = sess.run([hypothesis, predicted, accuracy],\n",
     "                      feed_dict={X:x_data, Y:y_data})\n",
     "    print(\"\\nHypothesis:\\n\", h, \"\\nCorrect(Y):\\n\", c,\"\\nAccuracy:\\n\", a)"
@@ -141,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1779,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1791,7 +1821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -1800,73 +1830,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From <ipython-input-32-5cb5d41574f2>:17: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "\n",
-      "Future major versions of TensorFlow will allow gradients to flow\n",
-      "into the labels input on backprop by default.\n",
-      "\n",
-      "See `tf.nn.softmax_cross_entropy_with_logits_v2`.\n",
-      "\n",
       "Step:0\n",
-      "Loss:3.3682\n",
+      "Loss:4.3287\n",
       "Acc:0.13\n",
       "Step:100\n",
-      "Loss:0.6141\n",
-      "Acc:0.83\n",
+      "Loss:0.6182\n",
+      "Acc:0.84\n",
       "Step:200\n",
-      "Loss:0.4024\n",
-      "Acc:0.89\n",
-      "Step:300\n",
-      "Loss:0.2982\n",
+      "Loss:0.3911\n",
       "Acc:0.90\n",
-      "Step:400\n",
-      "Loss:0.2353\n",
-      "Acc:0.92\n",
-      "Step:500\n",
-      "Loss:0.1943\n",
-      "Acc:0.94\n",
-      "Step:600\n",
-      "Loss:0.1658\n",
+      "Step:300\n",
+      "Loss:0.2986\n",
       "Acc:0.96\n",
+      "Step:400\n",
+      "Loss:0.2434\n",
+      "Acc:0.96\n",
+      "Step:500\n",
+      "Loss:0.2056\n",
+      "Acc:0.98\n",
+      "Step:600\n",
+      "Loss:0.1774\n",
+      "Acc:0.98\n",
       "Step:700\n",
-      "Loss:0.1449\n",
-      "Acc:0.97\n",
+      "Loss:0.1555\n",
+      "Acc:0.98\n",
       "Step:800\n",
-      "Loss:0.1287\n",
+      "Loss:0.1379\n",
       "Acc:0.98\n",
       "Step:900\n",
-      "Loss:0.1159\n",
+      "Loss:0.1235\n",
       "Acc:0.98\n",
       "Step:1000\n",
-      "Loss:0.1054\n",
-      "Acc:1.00\n",
+      "Loss:0.1116\n",
+      "Acc:0.99\n",
       "Step:1100\n",
-      "Loss:0.0967\n",
-      "Acc:1.00\n",
+      "Loss:0.1016\n",
+      "Acc:0.99\n",
       "Step:1200\n",
-      "Loss:0.0893\n",
-      "Acc:1.00\n",
+      "Loss:0.0932\n",
+      "Acc:0.99\n",
       "Step:1300\n",
-      "Loss:0.0829\n",
-      "Acc:1.00\n",
+      "Loss:0.0861\n",
+      "Acc:0.99\n",
       "Step:1400\n",
-      "Loss:0.0774\n",
-      "Acc:1.00\n",
+      "Loss:0.0800\n",
+      "Acc:0.99\n",
       "Step:1500\n",
-      "Loss:0.0725\n",
-      "Acc:1.00\n",
+      "Loss:0.0747\n",
+      "Acc:0.99\n",
       "Step:1600\n",
-      "Loss:0.0682\n",
+      "Loss:0.0701\n",
       "Acc:1.00\n",
       "Step:1700\n",
-      "Loss:0.0644\n",
+      "Loss:0.0661\n",
       "Acc:1.00\n",
       "Step:1800\n",
-      "Loss:0.0610\n",
+      "Loss:0.0625\n",
       "Acc:1.00\n",
       "Step:1900\n",
-      "Loss:0.0580\n",
+      "Loss:0.0592\n",
       "Acc:1.00\n",
       "[True] Prediction:0, True_Y:0\n",
       "[True] Prediction:0, True_Y:0\n",
@@ -1973,11 +1995,13 @@
     }
    ],
    "source": [
+    "# 클래스 개수 할당\n",
     "nb_classes = 7\n",
-    "\n",
+    "# 16개의 Feature\n",
     "X = tf.placeholder(tf.float32, shape=[None, 16])\n",
     "Y = tf.placeholder(tf.int32, shape=[None, 1])\n",
-    "# target을 원 핫 인코딩 시켜주기, one_hot은 그런데 3차원 shape(?, 1, 7)로 반환\n",
+    "# ?는 몇개의 데이터 개수가 들어올지 모르니 유동적인 값을 의미\n",
+    "# target을 원 핫 인코딩 시켜주기, one_hot은 그런데 3차원 shape(?, 1, 7)로 반환함.. \n",
     "Y_one_hot = tf.one_hot(Y, nb_classes)\n",
     "# 그래서 2차원 shape으로 만들어주어야 함. (?, 7)로!\n",
     "Y_one_hot = tf.reshape(Y_one_hot, [-1, nb_classes])\n",
@@ -1986,29 +2010,37 @@
     "b = tf.Variable(tf.random_normal([nb_classes]), name='bias')\n",
     "\n",
     "logits = tf.matmul(X, W) + b\n",
+    "# 활성함수를 Softmax function을 사용\n",
     "hypothesis = tf.nn.softmax(logits)\n",
     "\n",
+    "# 텐서플로우는 Softmax 활성함수와 cross-entropy Cost function을 한 번에 정의 가능. 대신 logits인자에 활성함수 적용 '전'을 넣어야 함!\n",
     "cost_i = tf.nn.softmax_cross_entropy_with_logits(logits=logits,\n",
     "                                                labels=Y_one_hot)\n",
     "\n",
     "cost = tf.reduce_mean(cost_i)\n",
     "optimizer = tf.train.GradientDescentOptimizer(learning_rate=0.1).minimize(cost)\n",
     "\n",
-    "# argmax 인자의 1은 max를 찾을 방향을 찾는것 0=행, 1=열\n",
+    "# argmax 인자의 1은 max를 찾을 방향을 찾는것: 0=행, 1=열\n",
+    "# tf.argmax : hypothesis 배열 중 열(1)기준으로 가장 큰 값을 갖는 index를 반환시킴\n",
     "prediction = tf.argmax(hypothesis, 1)\n",
+    "# 예측값과 실제값을 비교해 Boolean값 맞췄으면 True(1), 틀렸으면 False(0)으로 반환\n",
     "correct_prediction = tf.equal(prediction, tf.argmax(Y_one_hot, 1))\n",
+    "# 예측값과 실제값이 일치하는 True값들의 평균 계산하여 accuracy 계산\n",
     "accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
     "\n",
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
+    "    # 2000번 학습을 통해서 SGD수행\n",
     "    for step in range(2000):\n",
     "        sess.run(optimizer, feed_dict={X:x_data, Y:y_data})\n",
     "        if step % 100 == 0:\n",
     "            loss, acc = sess.run([cost, accuracy],\n",
     "                                feed_dict={X:x_data, Y:y_data})\n",
     "            print(f\"Step:{step}\\nLoss:{loss:.4f}\\nAcc:{acc:.2f}\")\n",
-    "    \n",
+    "            \n",
+    "    # 2000번의 학습 종료 후 마지막에 업데이트된 파라미터값으로 예측값 출력\n",
     "    pred = sess.run(prediction, feed_dict={X:x_data})\n",
+    "    # 실제값의 차원을 예측값과 일치시켜준 후 예측값과 실제값 각각 출력\n",
     "    for p, y in zip(pred, y_data.flatten()):\n",
     "        print(f\"[{p==int(y)}] Prediction:{p}, True_Y:{int(y)}\")"
    ]
