--- a/machine_learning/tensorflow/CNN_hands-on.ipynb
+++ b/machine_learning/tensorflow/CNN_hands-on.ipynb
@@ -1,20 +1,82 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MNIST with CNN"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From <ipython-input-1-1adf6e33d929>:3: read_data_sets (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n",
+      "WARNING:tensorflow:From /Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:260: maybe_download (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please write your own downloading logic.\n",
+      "WARNING:tensorflow:From /Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorflow/contrib/learn/python/learn/datasets/base.py:252: _internal_retry.<locals>.wrap.<locals>.wrapped_fn (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use urllib or similar directly.\n",
+      "Successfully downloaded train-images-idx3-ubyte.gz 9912422 bytes.\n",
+      "WARNING:tensorflow:From /Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:262: extract_images (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.data to implement this functionality.\n",
       "Extracting /tmp/data/train-images-idx3-ubyte.gz\n",
+      "Successfully downloaded train-labels-idx1-ubyte.gz 28881 bytes.\n",
+      "WARNING:tensorflow:From /Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:267: extract_labels (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.data to implement this functionality.\n",
       "Extracting /tmp/data/train-labels-idx1-ubyte.gz\n",
+      "WARNING:tensorflow:From /Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:110: dense_to_one_hot (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.one_hot on tensors.\n",
+      "Successfully downloaded t10k-images-idx3-ubyte.gz 1648877 bytes.\n",
       "Extracting /tmp/data/t10k-images-idx3-ubyte.gz\n",
-      "Extracting /tmp/data/t10k-labels-idx1-ubyte.gz\n"
+      "Successfully downloaded t10k-labels-idx1-ubyte.gz 4542 bytes.\n",
+      "Extracting /tmp/data/t10k-labels-idx1-ubyte.gz\n",
+      "WARNING:tensorflow:From /Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:290: DataSet.__init__ (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n"
      ]
     }
    ],
@@ -26,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +108,7 @@
     "    '''<필터 shape설정만 독특하게 다름!>\n",
     "    [height, width, 입력 channel, 출력 channel]\n",
     "    - height, width: 이미지 가로, 세로 길이\n",
-    "    - 입력 channel: 들어오는 이미지 개수\n",
+    "    - 입력 channel: 들어오는 이미지에 필터링 할 필터 개수\n",
     "    - 출력 channel: 들어오는 이미지 1개에 대해 필터들을 적용하니까 필터개수 만큼 출력됨!\n",
     "    '''\n",
     "        # truncated_normal:일반 random_normal로 하면 -무한대와 +무한대에 근사한 값들도 포함되어 설정할 수 있으므로 그 경우에 학습시간이 오래걸림\n",
@@ -92,7 +154,7 @@
     "    h_pool2 = tf.nn.max_pool(h_conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
     "    \n",
     "    # Fully Connected layer1 정의\n",
-    "    '''<Fully Conntected Wegiht값 size설정 \n",
+    "    '''<Fully Conntected Wegiht값 size설정>\n",
     "    [입력channel, 출력channel]\n",
     "    - shape 첫 번째 인자: 2번의 pooling 모두 거친 후의 이미지 가로와 세로,\n",
     "      그리고 64개의 필터들로 추출된 특징 64개를 곱해 모든 특징값들을 한 곳으로 모으기\n",
@@ -100,7 +162,7 @@
     "    '''\n",
     "    W_fc1 = tf.Variable(tf.truncated_normal(shape=[7*7*64, 1024], stddev=5e-2))\n",
     "    b_fc1 = tf.Variable(tf.constant(0.1, shape=[1024]))\n",
-    "    # 2번의 CNN을 거친 결과의 4차원 shape을 1차원으로 쫘악 펴주기- 데이터개수(행)는 가변적(-1)으로, 열(column)은 모든 특징값들 개수\n",
+    "    # 2번의 CNN을 거친 결과의 4차원 shape을 1차원으로 쫘악 펴주기- 데이터개수(행)는 가변적(-1)으로, 열(column)은 모든 특징값들 개수(W_fc1 행길이=h_pool2_flat 열길이)\n",
     "    h_pool2_flat = tf.reshape(h_pool2, [-1, 7*7*64])\n",
     "    # flatten해준 특징값들을 W_fc1과 곱한 후 summation, 그리고 bias값 더하기!\n",
     "    h_fc1 = tf.nn.relu(tf.matmul(h_pool2_flat, W_fc1) + b_fc1)\n",
@@ -118,49 +180,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(55000, 784)\n"
+      "Epoch :0, Training Acc: 0.080000\n",
+      "Epoch :100, Training Acc: 0.760000\n",
+      "Epoch :200, Training Acc: 0.820000\n",
+      "Epoch :300, Training Acc: 0.980000\n",
+      "Epoch :400, Training Acc: 0.900000\n",
+      "Epoch :500, Training Acc: 1.000000\n",
+      "Epoch :600, Training Acc: 0.900000\n",
+      "Epoch :700, Training Acc: 0.960000\n",
+      "Epoch :800, Training Acc: 0.960000\n",
+      "Epoch :900, Training Acc: 0.940000\n",
+      "Test Acc: 0.9608\n"
      ]
     }
    ],
    "source": [
-    "image = mnist.train.images\n",
-    "print(image.shape)"
+    "# Train, Test placeholder, cost function, accuracy 등 정의 \n",
+    "\n",
+    "# x는 내장 데이터에서 제공하는 image shape=[550000, 784]이기 때문!\n",
+    "x = tf.placeholder(tf.float32, shape=[None, 784])\n",
+    "y = tf.placeholder(tf.float32, shape=[None, 10])\n",
+    "\n",
+    "y_pred, logits = build_CNN_classifier(x)\n",
+    "\n",
+    "# cost function : cross-entropy\n",
+    "loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(labels=y,\n",
+    "                                                                logits=logits))\n",
+    "# Gradient Descent 사용해 cost 최소화\n",
+    "train_step = tf.train.AdamOptimizer(learning_rate=1e-4).minimize(loss)\n",
+    "\n",
+    "# 예측값에서 1(열)방향으로 값이 가장 큰 인자값(=정답숫자)\n",
+    "# & 실제값에서 1(열)방향으로 가장 큰 인자값(=정답숫자) \n",
+    "# 일치하면 True(1), 불일치하면 False(0)반환\n",
+    "correct_prediction = tf.equal(tf.argmax(y_pred, 1), tf.argmax(y, 1))\n",
+    "\n",
+    "# 정확도 정의(correct_prediction을 float형으로 만든 후 평균 계산!)\n",
+    "accuracy = tf.reduce_mean(tf.cast(correct_prediction, dtype=tf.float32))\n",
+    "\n",
+    "# 위에서 만들었던 텐서들 Run 시키기\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    for i in range(1000):\n",
+    "        # MNIST 데이터에서 batch_size 설정해 그것만큼 학습시키면서 cost 최소화 시켜라!\n",
+    "        batch = mnist.train.next_batch(50)\n",
+    "        if i % 100 == 0:\n",
+    "            # 학습 시 정확도 일부 출력 - batch[0]:이미지feature들, batch[1]:정답(label)\n",
+    "            train_accuracy = accuracy.eval(feed_dict={x: batch[0], y:batch[1]})\n",
+    "            print(f\"Epoch :{i}, Training Acc: {train_accuracy:4f}\")\n",
+    "        # Gradient Descent로 Cost 최소화시키도록 학습\n",
+    "        sess.run([train_step], feed_dict={x:batch[0], y:batch[1]})\n",
+    "    \n",
+    "    # 마지막 학습한 최종 파라미터로 Test데이터로 평가 후 정확도 출력\n",
+    "    test_accuracy = accuracy.eval(feed_dict={x:mnist.test.images,\n",
+    "                                            y:mnist.test.labels})\n",
+    "    print(f\"Test Acc: {test_accuracy:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CIFAR-10 with CNN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reshape = tf.reshape(image, [-1, 28, 28, 1])"
+    "import numpy as np\n",
+    "from tensorflow.keras.datasets.cifar10 import load_data\n",
+    "\n",
+    "def next_batch(num, data, labels):\n",
+    "    # 0부터 data길이-1 크기대로 data길이 만큼 요소를 담은 array만들기\n",
+    "    idx = np.arange(0, len(data))\n",
+    "    # 위에서 만든 idx 순서를 무작위로 섞음\n",
+    "    np.random_shuffle(idx)\n",
+    "    # 설정한 batch_size만큼의 index 재할당\n",
+    "    idx = idx[:num]\n",
+    "    # 위의 index 위치에 패밍되는 data 하나씩 담기(label도 마찬가지)\n",
+    "    data_shuffle = [data[i] for i in idx]\n",
+    "    labels_shuffle = [labels[i] for i in idx]\n",
+    "    \n",
+    "    # asarray() 사용해 array로 만들고 리턴\n",
+    "    return np.asarray(data_shuffle), np.asarray(labels_shuffle)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build CNN\n",
+    "def build_CNN_classfier(x):\n",
+    "    x_image = x\n",
+    "    # shape=[heightm, widht, 입력채널개수, 출력채널개수] -> 3=필터개수\n",
+    "    W_conv1 = tf.Variable(tf.truncated_normal(shape=[5, 5, 3, 64],\n",
+    "                                             stddev=5e-2))\n",
+    "    b_conv1 = tf.Variable(tf.constant(0.1, shape=[64]))\n",
+    "    # 입력 이미지와 필터를 strides사이즈와 padding 설정하고 컨볼루션한 후 bias를 더해 활성함수 relu적용\n",
+    "    h_conv1 = tf.nn.relu(tf.nn.conv2d(x_image, W_conv1,\n",
+    "                                     strides=[1, 1, 1, 1],\n",
+    "                                     padding='SAME') + b_conv1)\n",
+    "    h_pool1 = tf.nn.max_pool(h_conv1, ksize=[1, 3, 3, 1],\n",
+    "                            strides=[1, 2, 2, 1], padding='SAME')\n",
+    "    # padding='SAME'이므로 필터적용할 사이즈 이전 입력 사이즈랑 동일!\n",
+    "    W_conv2 = tf.Variable(tf.truncated_normal(shape=[5, 5, 64, 64],\n",
+    "                                             stddev=5e-2))\n",
+    "    b_conv2 = tf.Variable(tf.constant(0.1, shape=[64]))\n",
+    "    h_conv2 = tf.nn.relu(tf.nn.conv2d(h_pool1, W_conv2,\n",
+    "                                     strides=[1, 1, 1, 1],\n",
+    "                                     padding='SAME') + b_conv2)\n",
+    "    h_pool2 = tf.nn.max_pool(h_conv2, ksize=[1, 3, 3, 1],\n",
+    "                            strides=[1, 2, 2, 1], padding='SAME')\n",
+    "    # W의 shape에서 height, width는 필터의 height, width임!\n",
+    "    W_conv3 = tf.Variable(tf.truncated_normal(shape=[3, 3, 64, 128],\n",
+    "                                             stddev=5e-2))\n",
+    "    b_conv3 = tf.Variable(tf.constant(0.1, shape=[128]))\n",
+    "    h_conv3 = tf.nn.relu(tf.nn.conv2d(h_pool2, W_conv3,\n",
+    "                                     strides=[1, 1, 1, 1],\n",
+    "                                     padding='SAME') + b_conv3)\n",
+    "    \n",
+    "    W_conv4 = tf.Variable(tf.truncated_normal(shape=[3, 3, 128, 128],\n",
+    "                                             stddev=5e-2))\n",
+    "    b_conv4 = tf.Variable(tf.constant(0.1, shape=[128]))\n",
+    "    h_conv4 = tf.nn.relu(tf.nn.conv2d(h_conv3, W_conv4,\n",
+    "                                     strides=[1, 1, 1, 1],\n",
+    "                                     padding='SAME'))\n",
+    "    \n",
+    "    W_conv5 = tf.Variable(tf.truncated_normal(shape=[3, 3, 128, 128],\n",
+    "                                             stddev=5e-2))\n",
+    "    b_conv5 = tf.Variable(tf.constant(0.1, shape=[128]))\n",
+    "    h_conv5 = tf.nn.relu(tf.nn.conv2d(h_conv4, W_conv5,\n",
+    "                                     strides=[1, 1, 1, 1],\n",
+    "                                     padding='SAME') + b_conv5)\n",
+    "    # Fully connected 부터\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(28, 28, 1)"
+       "array([0, 1, 2])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "image.reshape(-1, 28, 28, 1)[0].shape"
+    "np.arange(0, 3)"
    ]
   },
   {
