실습코드완성

--- a/machine_learning/tensorflow/CNN_hands-on.ipynb
+++ b/machine_learning/tensorflow/CNN_hands-on.ipynb
@@ -150,7 +150,7 @@
     "    b_conv2 = tf.Variable(tf.constant(0.1, shape=[64]))\n",
     "    h_conv2 = tf.nn.relu(tf.nn.conv2d(h_pool1, W_conv2, strides=[1, 1, 1, 1], padding='SAME') + b_conv2)\n",
     "    # h_pool1결과로 각 필터의 특징 size가 14 by 14인 상태인데, 여기서 pooling size를 2 by 2로 설정\n",
-    "    # 2번째 pooling을 거친 후 각 필터의 특징 size는 7 by 7임.\n",
+    "    # 2번째 pooling을 거친 후 나온 이미지 특징 size는 7 by 7임.\n",
     "    h_pool2 = tf.nn.max_pool(h_conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
     "    \n",
     "    # Fully Connected layer1 정의\n",
@@ -158,7 +158,7 @@
     "    [입력channel, 출력channel]\n",
     "    - shape 첫 번째 인자: 2번의 pooling 모두 거친 후의 이미지 가로와 세로,\n",
     "      그리고 64개의 필터들로 추출된 특징 64개를 곱해 모든 특징값들을 한 곳으로 모으기\n",
-    "    - shape 두 번째 인자: 1024개 만큼의 출력 size를 임의로 설정?\n",
+    "    - shape 두 번째 인자: 1024개 만큼의 출력 size를 임의로 설정\n",
     "    '''\n",
     "    W_fc1 = tf.Variable(tf.truncated_normal(shape=[7*7*64, 1024], stddev=5e-2))\n",
     "    b_fc1 = tf.Variable(tf.constant(0.1, shape=[1024]))\n",
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,10 +270,10 @@
     "    # 0부터 data길이-1 크기대로 data길이 만큼 요소를 담은 array만들기\n",
     "    idx = np.arange(0, len(data))\n",
     "    # 위에서 만든 idx 순서를 무작위로 섞음\n",
-    "    np.random_shuffle(idx)\n",
+    "    np.random.shuffle(idx)\n",
     "    # 설정한 batch_size만큼의 index 재할당\n",
     "    idx = idx[:num]\n",
-    "    # 위의 index 위치에 패밍되는 data 하나씩 담기(label도 마찬가지)\n",
+    "    # 위의 index 위치에 매핑되는 data 하나씩 담기(label도 마찬가지)\n",
     "    data_shuffle = [data[i] for i in idx]\n",
     "    labels_shuffle = [labels[i] for i in idx]\n",
     "    \n",
@@ -283,14 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# build CNN\n",
     "def build_CNN_classfier(x):\n",
     "    x_image = x\n",
-    "    # shape=[heightm, widht, 입력채널개수, 출력채널개수] -> 3=필터개수\n",
+    "    # shape=[필터의height, 필터의width, 입력채널개수, 출력채널개수] -> 3은 뭐지..?\n",
     "    W_conv1 = tf.Variable(tf.truncated_normal(shape=[5, 5, 3, 64],\n",
     "                                             stddev=5e-2))\n",
     "    b_conv1 = tf.Variable(tf.constant(0.1, shape=[64]))\n",
@@ -298,6 +298,7 @@
     "    h_conv1 = tf.nn.relu(tf.nn.conv2d(x_image, W_conv1,\n",
     "                                     strides=[1, 1, 1, 1],\n",
     "                                     padding='SAME') + b_conv1)\n",
+    "    # ksize의 batch_size 인자가 1인 것은 하나의 필터로 도출되어 나온 특징 feature 1개 당 pooling을 적용하기 때문\n",
     "    h_pool1 = tf.nn.max_pool(h_conv1, ksize=[1, 3, 3, 1],\n",
     "                            strides=[1, 2, 2, 1], padding='SAME')\n",
     "    # padding='SAME'이므로 필터적용할 사이즈 이전 입력 사이즈랑 동일!\n",
@@ -330,8 +331,107 @@
     "    h_conv5 = tf.nn.relu(tf.nn.conv2d(h_conv4, W_conv5,\n",
     "                                     strides=[1, 1, 1, 1],\n",
     "                                     padding='SAME') + b_conv5)\n",
-    "    # Fully connected 부터\n",
-    "    "
+    "    # Fully connected layer1\n",
+    "    # W_fc1의 shape 첫 번째 인자로 pooling거친 후 이미지 가로,세로 어떻게알지..?\n",
+    "    W_fc1 = tf.Variable(tf.truncated_normal(shape=[8*8*128, 384],\n",
+    "                                           stddev=5e-2))\n",
+    "    b_fc1 = tf.Variable(tf.constant(0.1, shape=[384]))\n",
+    "    \n",
+    "    # h_conv5를 W_fc1 행개수에 맞게 열벡터로 만들어주기\n",
+    "    h_conv5_flat = tf.reshape(h_conv5, [-1, 8*8*128])\n",
+    "    # 열벡터 만들어준 것을 W_fc1 weight와 곱하고 bias취해준 후 활성함수 적용\n",
+    "    h_fc1 = tf.nn.relu(tf.matmul(h_conv5_flat, W_fc1) + b_fc1)\n",
+    "    \n",
+    "    # Dropout으로 일부 노드 랜덤하게 드랍시키기\n",
+    "    h_fc1_drop = tf.nn.dropout(h_fc1, keep_prob)\n",
+    "    \n",
+    "    # Fully connected layer2 - 최종 에측값 출력\n",
+    "    W_fc2 = tf.Variable(tf.truncated_normal(shape=[384,10],\n",
+    "                                           stddev=5e-2))\n",
+    "    b_fc2 = tf.Variable(tf.constant(0.1, shape=[10]))\n",
+    "    logits = tf.matmul(h_fc1_drop, W_fc2) + b_fc2\n",
+    "    y_pred = tf.nn.softmax(logits)\n",
+    "    return y_pred, logits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch:0, Train acc:0.0938,            Loss:209.7190\n",
+      "Epoch:100, Train acc:0.2031,            Loss:2.1303\n",
+      "Epoch:200, Train acc:0.2500,            Loss:1.9494\n",
+      "Epoch:300, Train acc:0.2500,            Loss:2.1199\n",
+      "Epoch:400, Train acc:0.5000,            Loss:1.3801\n",
+      "Epoch:500, Train acc:0.4297,            Loss:1.6563\n",
+      "Epoch:600, Train acc:0.5312,            Loss:1.4106\n",
+      "Epoch:700, Train acc:0.4219,            Loss:1.5192\n",
+      "Epoch:800, Train acc:0.5312,            Loss:1.3219\n",
+      "Epoch:900, Train acc:0.5859,            Loss:1.3877\n",
+      "Test 평균 정확도: 0.5455\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 데이터 placeholder\n",
+    "# 이미지 가로 32, 세로 32, 마지막인자가 3인 이유는 컬러라서..? MNIST는 흑백이라 1..?\n",
+    "x = tf.placeholder(tf.float32, shape=[None, 32, 32, 3])\n",
+    "y = tf.placeholder(tf.float32, shape=[None, 10])\n",
+    "keep_prob = tf.placeholder(tf.float32)\n",
+    "\n",
+    "(x_train, y_train), (x_test, y_test) = load_data()\n",
+    "# label를 원-핫 인코딩 시키기- squeeze이용\n",
+    "y_train_one_hot = tf.squeeze(tf.one_hot(y_train, 10), axis=1)\n",
+    "y_test_one_hot = tf.squeeze(tf.one_hot(y_test, 10), axis=1)\n",
+    "\n",
+    "y_pred, logits = build_CNN_classfier(x)\n",
+    "\n",
+    "# cost function, **참고로 v2 = version.2임..!\n",
+    "loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(labels=y,\n",
+    "                                                                logits=logits))\n",
+    "# Gradient Descent 사용해 loss 최소화\n",
+    "train_step = tf.train.RMSPropOptimizer(learning_rate=1e-3).minimize(loss)\n",
+    "# 예측값과 실제값 비교해서 맞으면 1 틀리면 0 반환\n",
+    "correct_prediction = tf.equal(tf.argmax(y_pred, 1), tf.argmax(y, 1))\n",
+    "# 예측값=실제값 만족하는 '1' 평균 계산해 정확도 계산\n",
+    "accuracy = tf.reduce_mean(tf.cast(correct_prediction, dtype=tf.float32))\n",
+    "\n",
+    "# 만든 텐서 run\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    for i in range(1000):\n",
+    "        # batch_size=128개씩\n",
+    "        # 파이썬으로 정의한 함수 인자에 넣어주려면 만든 텐서를 값으로 넣어주어야하기 때문에 eval() 사용\n",
+    "        batch = next_batch(128, x_train, y_train_one_hot.eval())\n",
+    "        if i % 100 == 0:\n",
+    "            # 반복횟수가 100배수일때는 dropout하지 않고 모두 냅두기?\n",
+    "            train_accuracy = accuracy.eval(feed_dict={x: batch[0],\n",
+    "                                                     y: batch[1],\n",
+    "                                                     keep_prob:1.0})\n",
+    "            loss_print = loss.eval(feed_dict={x: batch[0],\n",
+    "                                             y: batch[1],\n",
+    "                                             keep_prob:1.0})\n",
+    "            print(f\"Epoch:{i}, Train acc:{train_accuracy:.4f},\\\n",
+    "            Loss:{loss_print:.4f}\")\n",
+    "        # 위 100배수 조건 만족하지 않는 나머지 반복횟수때는 20% 노드 드랍아웃하기\n",
+    "        sess.run(train_step, feed_dict={x: batch[0], y: batch[1],\n",
+    "                                       keep_prob:0.8})\n",
+    "        \n",
+    "        # Test데이터도 batch_size 나누어서 평균 정확도 측정\n",
+    "    test_acc = 0.0\n",
+    "    for i in range(10):\n",
+    "        test_batch = next_batch(1000, x_test, y_test_one_hot.eval())\n",
+    "        test_acc = test_acc + accuracy.eval(feed_dict={x: test_batch[0],\n",
+    "                                                                y: test_batch[1],\n",
+    "                                                                keep_prob: 1.0})\n",
+    "    test_acc = test_acc / 10\n",
+    "    print(f\"Test 평균 정확도: {test_acc:.4f}\")\n",
+    "            "
    ]
   },
   {
@@ -356,10 +456,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "32 * 32 == 8*8*124"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[[1, 2, 3]]]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.reshape(-1,1,1,3) ->컬러때문에 마지막인자가 3인가..?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[[1]]],\n",
+       "\n",
+       "\n",
+       "       [[[2]]],\n",
+       "\n",
+       "\n",
+       "       [[[3]]]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.reshape(-1,1,1,1) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tf.nn.con"
+   ]
   }
  ],
  "metadata": {
